bugfix: SingleValue. Setting the title breaks the scrolling of the component.

--- a/eva/src/components/dashBoardInside/SingleValue/sass/dashSingleValue.sass
+++ b/eva/src/components/dashBoardInside/SingleValue/sass/dashSingleValue.sass
@@ -32,7 +32,7 @@ $dash-loading-height: 3px
   display: flex
   flex-direction: column
   overflow: auto
-  @include container-height(0px)
+  @include container-height(35px)
 
   &::-webkit-scrollbar
     width: 6px
